<resources>
    <string name="app_name">Note App</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="cancel">CANCEL</string>
    <string name="note_app">Note App</string>
    <string name="make_your_note_more_easier">Make your note more easier!</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="for_got_your_password">For got your password?</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_1">Create Account</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="eugen_ho">Eugen Ho</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ho_nguyen_gia_bao">Ho Nguyen Gia Bao</string>
    <string name="baohng">BaoHng</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="tags">Tags</string>
    <string name="my_profile">My Profile</string>
    <string name="h_nguy_n_gia_b_o">Hồ Nguyễn Gia Bảo</string>
    <string name="msv_2050531200107">MSV:2050531200107</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out</string>
</resources>